--- a/app/views/home/bday.html.erb
+++ b/app/views/home/bday.html.erb
@@ -8,6 +8,8 @@
  </template>
  <div class="container">
        <h1 id='bday'>Happy bday <%= @user.name %>...!</h1>
+       <h1 id="head"></h1><br><br><br><br><br>
+       <h1 id="countdown_body"></h1>
  </div>
  <div class="living-room"></div>
 
