--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -63,8 +63,8 @@
       day = hour * 24,
       t = false;
 
-      // let countDown = new Date(<%= @bday.year %>, <%= @bday.mon-1 %>, <%= @bday.day %>).getTime();
-      let countDown = new Date(2020,0,7,23,4).getTime();
+      let countDown = new Date(<%= @bday.year %>, <%= @bday.mon-1 %>, <%= @bday.day %>).getTime();
+      // let countDown = new Date(2020,0,7,23,4).getTime();
       var x = setInterval(function() {
 
       let now = new Date().getTime(),
